LDAP Integration tests fail on JDK-17 #9899